# inkdx

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
calibration/: w00_pherc_paris4.json
docs/: attribution.md  label3d.md  metrics.md  schema.md  snap.md  submission_draft.md
scripts/: run_layer_stack.py
src/inkdx/: __init__.py  calibration.py  cli.py  grid.py  runner.py  sampling.py  verdict.py
src/inkdx/ablate/: mesh.py  noise.py
src/inkdx/io/: segment.py  volume.py
src/inkdx/label3d/: depth.py  emit.py  report.py
src/inkdx/report/: html_report.py  json_report.py  schema.py
src/inkdx/snap/: offsets.py  orient.py  regularize.py  report.py  runner.py
src/inkdx/stages/: model.py  profile_features.py  scan.py  surface.py
src/inkdx/testing/: synthetic.py
tests/: test_ablate.py  test_cli_snap.py  test_dense_profiles.py  test_grid.py  test_label3d.py  test_model.py  test_report.py  test_runner.py  test_sampling.py  test_scan.py  test_segment.py  test_snap.py  test_surface.py  test_synthetic.py  test_verdict.py
