[project]
name = "inkdx"
version = "0.1.0.dev0"
description = "Ink-failure diagnostics for the Vesuvius Challenge: when ink doesn't show up, inkdx tells you why — bad scan, bad surface, or bad model."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Aishwarya Das", email = "aishwarya@diraclabs.com" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "tifffile>=2024.1.30",
    "zarr>=2.16,<3",
    "imagecodecs>=2024.1.1",
    "typer>=0.12",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "matplotlib>=3.8",
    "pillow>=10.0",
]

[project.optional-dependencies]
# Remote streaming of scroll volumes / segments via the official vesuvius library.
# Heavy (pulls in torch); the core toolkit is CPU-only and light.
remote = ["vesuvius>=0.1"]

[project.scripts]
inkdx = "inkdx.cli:app"

[project.urls]
Repository = "https://github.com/ash9241/inkdx"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inkdx"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "NPY"]

[tool.ruff.lint.per-file-ignores]
"src/inkdx/cli.py" = ["B008"]  # typer's documented Option-in-default idiom
"src/inkdx/report/html_report.py" = ["E501"]  # inline HTML template

[tool.pytest.ini_options]
testpaths = ["tests"]
